feature: improve web frontend UX

--- a/static/src/index.html
+++ b/static/src/index.html
@@ -30,7 +30,9 @@
             }
           })
         });
-        window.location.href = (await resp.json())["path"];
+        const path = (await resp.json())["path"];
+        spinner.classList.remove("loading");
+        window.location.href = path;
       }
       </script>
   </head>
